Implement Redis caching for URL redirects and optimize click handling
- Added `UrlRedirectLookupService` with Redis caching to improve lookup efficiency.
- Updated `getOriginalUrl` in `UrlMappingService` to use caching and transactional logic.
- Introduced `RedisCacheConfig` for cache configuration with Spring Data Redis.
- Modified `application.properties` for Redis connection settings.
- Refactored `AuditLogService` for streamlined click event logging.
- Updated `UrlMappingRepository` to handle click count incrementation with a custom query.
- Enhanced test coverage for new caching-related services and repository functionality.